--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.img-project {
+    width: 100% !important;
+    height: 100% !important;
+}
